Actualizado archivo bibliografía. #9

--- a/documentacion/biblio.bib
+++ b/documentacion/biblio.bib
@@ -1,202 +1,436 @@
 
-@misc{iecIECWorldPlugs,
-  title = {{{IEC}} - {{World Plugs}}: {{List}} View by Potential},
-  howpublished = {https://web.archive.org/web/20180822153312/http://www.iec.ch/worldplugs/list\_byelectricpotential.htm},
-  author = {IEC},
-  keywords = {potencial,voltaje},
-  file = {/home/cuack/Zotero/storage/H2VD4RCP/list_byelectricpotential.html}
+@misc{ACS712DatasheetPDF,
+  title = {{{ACS712 Datasheet}}({{PDF}}) - {{Allegro MicroSystems}}},
+  howpublished = {https://www.alldatasheet.com/datasheet-pdf/pdf/168326/ALLEGRO/ACS712.html},
+  keywords = {acs712,sensores}
 }
 
-@misc{nuevatribunaOrigenFrecuenciasElectricas,
-  title = {{El origen de las frecuencias el{\'e}ctricas \textquestiondown{}Por qu{\'e} 50 y 60 Hz?}},
-  abstract = {Aunque en la actualidad pueda parecer que siempre ha existido una {\'u}nica frecuenc...},
-  language = {es},
-  journal = {Nuevatribuna},
-  howpublished = {https://web.archive.org/web/20191101233437/https://www.nuevatribuna.es/articulo/ciencia/origen-frecuencias-electricas-50-y-60-hz/20150811110350118983.html},
-  author = {Nuevatribuna},
-  file = {/home/cuack/Zotero/storage/S8F4RGG4/20150811110350118983.html}
+@article{al-fuqahaInternetThingsSurvey2015,
+  title = {Internet of {{Things}}: {{A Survey}} on {{Enabling Technologies}}, {{Protocols}}, and {{Applications}}},
+  shorttitle = {Internet of {{Things}}},
+  author = {{Al-Fuqaha}, Ala and Guizani, Mohsen and Mohammadi, Mehdi and Aledhari, Mohammed and Ayyash, Moussa},
+  year = {Fourthquarter 2015},
+  volume = {17},
+  pages = {2347--2376},
+  issn = {1553-877X, 2373-745X},
+  doi = {10.1109/COMST.2015.2444095},
+  abstract = {This paper provides an overview of the Internet of Things (IoT) with emphasis on enabling technologies, protocols, and application issues. The IoT is enabled by the latest developments in RFID, smart sensors, communication technologies, and Internet protocols. The basic premise is to have smart sensors collaborate directly without human involvement to deliver a new class of applications. The current revolution in Internet, mobile, and machine-to-machine (M2M) technologies can be seen as the first phase of the IoT. In the coming years, the IoT is expected to bridge diverse technologies to enable new applications by connecting physical objects together in support of intelligent decision making. This paper starts by providing a horizontal overview of the IoT. Then, we give an overview of some technical details that pertain to the IoT enabling technologies, protocols, and applications. Compared to other survey papers in the field, our objective is to provide a more thorough summary of the most relevant protocols and application issues to enable researchers and application developers to get up to speed quickly on how the different protocols fit together to deliver desired functionalities without having to go through RFCs and the standards specifications. We also provide an overview of some of the key IoT challenges presented in the recent literature and provide a summary of related research work. Moreover, we explore the relation between the IoT and other emerging technologies including big data analytics and cloud and fog computing. We also present the need for better horizontal integration among IoT services. Finally, we present detailed service use-cases to illustrate how the different protocols presented in the paper fit together to deliver desired IoT services.},
+  journal = {IEEE Communications Surveys Tutorials},
+  keywords = {AMQP,arquitectura,big data analytics,cloud computing,CoAP,communication technologies,Computer architecture,DDS,documentación,fog computing,intelligent decision making,Intelligent sensors,Internet of things,Internet of Things,Internet of Things (IoT),Internet protocols,IoT,IoT gateway,IoT Gateway,M2M technologies,machine-to-machine,mDNS,mobile communication,Mobile communication,MQTT,protocolos,protocols,radiofrequency identification,Radiofrequency identification,RFID,smart sensors,XMPP},
+  number = {4}
 }
 
-@misc{exploreembeddedwebsiteSettingBluetoothHC05,
-  title = {Setting up {{Bluetooth HC}}-05 with {{Arduino}}},
-  abstract = {Even though  Bluetooth Low Energy Modules available at a reasonable cost, most of these modules are not compatible with existing devices that support the classic Bluetooth. The HC-05 is an expensive module that is compatible with wide range of devices including smartphone, laptops and tablets. Adding...},
+@book{alcaldesanmiguelElectrotecniaInstalacionesElectricas2014,
+  title = {Electrotecnia : {{Instalaciones}} El\'ectricas y Autom\'aticas p.424},
+  author = {Alcalde San Miguel, Pablo},
+  year = {(2014)},
+  edition = {6\textordfeminine{} edici\'on},
+  publisher = {{Paraninfo.}},
+  address = {{Madrid}}
+}
+
+@misc{amazonwebsiteGarza400603Temporizador,
+  title = {Garza 400603 {{Temporizador}} Anal\'ogico Mini, {{Blanco}} - {{Azul}}: {{Amazon}}.Es: {{Bricolaje}} y Herramientas},
+  author = {Amazon (website)},
+  howpublished = {https://web.archive.org/web/20191111121153/https://www.amazon.es/Garza-Power-Temporizador-anal\%C3\%B3gico-programaci\%C3\%B3n/dp/B00URUVDW2/},
+  keywords = {teletienda}
+}
+
+@misc{amazonwebsiteOrbegozoPG202019,
+  title = {Orbegozo {{PG}} 20 - {{Programador}} El\'ectrico Digital Con Pantalla {{LCD}}, Temporizador de Funcionamiento Programable: {{Amazon}}.Es: {{Hogar}}},
+  shorttitle = {Orbegozo {{PG}} 20 - {{Programador}} El\'ectrico Digital Con Pantalla {{LCD}}, Temporizador de Funcionamiento Programable},
+  author = {Amazon (website)},
+  year = {2019},
+  month = nov,
+  howpublished = {https://web.archive.org/web/20191112121450/https://www.amazon.es/dp/B00ZJ1LQDK},
+  keywords = {teletienda}
+}
+
+@misc{amazonwebsiteTPLinkHS100Enchufe,
+  title = {{{TP}}-{{Link HS100}} - {{Enchufe}} Inteligente Para Controlar Sus Dispositivos Desde Cualquier Lugar, Sin Necesidad de Concentrador, Funciona Con {{Amazon Alexa}} y {{Google Home}} e {{IFTTT}}: {{Tp}}-{{Link}}: {{Amazon}}.Es: {{Inform\'atica}}},
+  author = {Amazon (website)},
+  howpublished = {https://web.archive.org/web/20191112130933/https://www.amazon.es/dp/B06W586CDZ},
+  keywords = {teletienda}
+}
+
+@misc{amazonwebsiteXiaomi18082Regleta2019,
+  title = {Xiaomi, 18082, {{Regleta}}, {{Blanco}}: {{Xiaomi}}: {{Amazon}}.Es: {{Electr\'onica}}},
+  shorttitle = {Xiaomi, 18082, {{Regleta}}, {{Blanco}}},
+  author = {Amazon (website)},
+  year = {2019},
+  month = nov,
+  howpublished = {https://web.archive.org/web/20191116174434/https://www.amazon.es/dp/B07DJ2G1CW},
+  keywords = {teletienda}
+}
+
+@misc{ArduinoR3,
+  title = {Arduino\_{{Uno}}\_{{R3}}},
+  howpublished = {https://upload.wikimedia.org/wikipedia/commons/3/38/Arduino\_Uno\_-\_R3.jpg},
+  keywords = {arduino,documentación,imagen}
+}
+
+@article{atzoriInternetThingsSurvey2010,
+  title = {The {{Internet}} of {{Things}}: {{A}} Survey},
+  shorttitle = {The {{Internet}} of {{Things}}},
+  author = {Atzori, Luigi and Iera, Antonio and Morabito, Giacomo},
+  year = {2010},
+  month = oct,
+  volume = {54},
+  pages = {2787--2805},
+  issn = {13891286},
+  doi = {10.1016/j.comnet.2010.05.010},
+  journal = {Computer Networks},
+  keywords = {documentación,IoT},
   language = {en},
-  journal = {Tutorials},
-  howpublished = {https://web.archive.org/web/20181017170923/http://exploreembedded.com/wiki/Setting\_up\_Bluetooth\_HC-05\_with\_Arduino},
-  author = {{exploreembedded (website)}},
-  keywords = {bluetooth,tutorial},
-  file = {/home/cuack/Zotero/storage/UWRMUFQD/Setting_up_Bluetooth_HC-05_with_Arduino.html}
+  number = {15}
+}
+
+@misc{banksMQTTVersionEdited,
+  title = {{{MQTT Version}} 3.1.1. {{Edited}} by {{Andrew Banks}} and {{Rahul Gupta}}. 29 {{October}} 2014. {{OASIS Standard}}. {{http://docs.oasis-open.org/mqtt/mqtt/v3.1.1/os/mqtt-v3.1.1-os.html.}} {{Latest}} Version: {{http://docs.oasis-open.org/mqtt/mqtt/v3.1.1/mqtt-v3.1.1.html.}}},
+  author = {Banks, Andrew and Gupta, Rahul},
+  keywords = {documentación,IoT,MQTT}
 }
 
 @misc{bertschmcgraynesharonElectricityAlternatingcurrentCircuits,
   title = {Electricity - {{Alternating}}-Current Circuits},
-  abstract = {Electricity - Electricity - Alternating-current circuits: Certain circuits include sources of alternating electromotive forces of the sinusoidal form V = V0 cos({$\omega$}t) or V = V0 sin({$\omega$}t). The sine and cosine functions have values that vary between +1 and -1; either of the equations for the voltage represents a potential that varies with respect to time and has values from +V0 to -V0. The voltage varies with time at a rate given by the numerical value of {$\omega$}; {$\omega$}, which is called the angular frequency, is expressed in radians per second. Figure 22 shows an example with V0 = 170 volts and {$\omega$} = 377 radians},
-  language = {en},
-  journal = {Encyclopedia Britannica},
-  howpublished = {https://web.archive.org/web/20190925195254/https://www.britannica.com/science/electricity/Alternating-current-circuits},
   author = {Bertsch McGrayne, Sharon and E. Suckling, Eustace and Kashy, Edwing and Neville H. Robinson, Frank},
+  abstract = {Electricity - Electricity - Alternating-current circuits: Certain circuits include sources of alternating electromotive forces of the sinusoidal form V = V0 cos({$\omega$}t) or V = V0 sin({$\omega$}t). The sine and cosine functions have values that vary between +1 and -1; either of the equations for the voltage represents a potential that varies with respect to time and has values from +V0 to -V0. The voltage varies with time at a rate given by the numerical value of {$\omega$}; {$\omega$}, which is called the angular frequency, is expressed in radians per second. Figure 22 shows an example with V0 = 170 volts and {$\omega$} = 377 radians},
+  howpublished = {https://web.archive.org/web/20190925195254/https://www.britannica.com/science/electricity/Alternating-current-circuits},
+  journal = {Encyclopedia Britannica},
   keywords = {intensidad,rms,TFG},
-  file = {/home/cuack/Zotero/storage/SLF9A8B2/Alternating-current-circuits.html;/home/cuack/Zotero/storage/V9ZUKUCG/Alternating-current-circuits.html}
+  language = {en}
 }
 
-@article{wikipediawebsiteValorEficazPara2019,
-  title = {{Valor eficaz (para comprender Irms)}},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  abstract = {Se denomina valor eficaz al valor cuadr{\'a}tico medio de una magnitud el{\'e}ctrica. El concepto de valor eficaz se utiliza especialmente para estudiar las formas de onda peri{\'o}dicas, a pesar de ser aplicable a todas las formas de onda, constantes o no. En ocasiones se denomina con el extranjerismo RMS (del ingl{\'e}s, root mean square).},
-  language = {es},
-  journal = {Wikipedia, la enciclopedia libre},
-  author = {{wikipedia (website)}},
-  month = oct,
-  year = {2019},
-  keywords = {corriente,intensidad,sensores,tfg},
-  file = {/home/cuack/Zotero/storage/YPDRNDBC/index.html},
-  note = {Page Version ID: 120619701}
+@book{bicsiNetworkDesignBasics2002,
+  title = {Network {{Design Basics}} for {{Cabling Professionals}}.},
+  author = {Bicsi, B.},
+  year = {(2002).},
+  publisher = {{McGraw-Hill Professional.}}
 }
 
-@misc{diarioelectronicohoywebsiteSensorCorrienteACS712,
-  title = {Sensor de {{Corriente ACS712}}. \textendash{} {{Electr{\'o}nica Pr{\'a}ctica Aplicada}}},
-  howpublished = {https://web.archive.org/web/20190715041409/https://www.diarioelectronicohoy.com/blog/sensor-de-corriente-acs712},
-  author = {{diarioelectronicohoy (website)}},
-  keywords = {acs712,intrusivo,sensores,tfg},
-  file = {/home/cuack/Zotero/storage/RGSQYVSW/sensor-de-corriente-acs712.html}
+@misc{CatBoostStateoftheartOpensource,
+  title = {{{CatBoost}} - State-of-the-Art Open-Source Gradient Boosting Library with Categorical Features Support},
+  abstract = {CatBoost - state-of-the-art open-source gradient boosting library with categorical features support, https://catboost.yandex/ \#catboost},
+  howpublished = {https://catboost.ai},
+  language = {en}
 }
 
 @misc{delvalleSCT013MideConsumo2017,
-  title = {{SCT-013 mide el consumo el{\'e}ctrico en tu casa con Arduino}},
-  abstract = {El SCT-013 es un sensor no invasivo para medir el consumo el{\'e}ctrico con Arduino. El SCT-013 te ayudar{\'a} a saber cuanto gastas con Arduino.},
-  language = {es},
-  journal = {Programar f{\'a}cil con Arduino},
-  howpublished = {https://web.archive.org/web/20191111200838/https://programarfacil.com/blog/arduino-blog/sct-013-consumo-electrico-arduino/},
+  title = {{SCT-013 mide el consumo el\'ectrico en tu casa con Arduino}},
   author = {{del Valle}, Luis},
-  month = sep,
   year = {2017},
+  month = sep,
+  abstract = {El SCT-013 es un sensor no invasivo para medir el consumo el\'ectrico con Arduino. El SCT-013 te ayudar\'a a saber cuanto gastas con Arduino.},
+  howpublished = {https://web.archive.org/web/20191111200838/https://programarfacil.com/blog/arduino-blog/sct-013-consumo-electrico-arduino/},
+  journal = {Programar f\'acil con Arduino},
   keywords = {sct013,sensores,tfg,valor eficaz},
-  file = {/home/cuack/Zotero/storage/9SH5TLWL/sct-013-consumo-electrico-arduino.html}
+  language = {es}
 }
 
-@misc{iotagendawebsiteWhatInternetThings,
-  title = {What Is Internet of Things ({{IoT}})? - {{Definition}} from {{WhatIs}}.Com},
-  shorttitle = {What Is Internet of Things ({{IoT}})?},
-  abstract = {Learn everything you need to know about the internet of things (IoT) as a system of interrelated computing devices, machines or objects which transfer data over a network without requiring human-to-human or human-to-computer interaction.},
-  language = {en},
-  journal = {IoT Agenda},
-  howpublished = {https://web.archive.org/web/20191107082047/https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT},
-  author = {IoT Agenda (website)},
-  keywords = {documentación,ejemplos,IoT},
-  file = {/home/cuack/Zotero/storage/QJDUX8LC/Internet-of-Things-IoT.html}
+@misc{diarioelectronicohoywebsiteSensorCorrienteACS712,
+  title = {Sensor de {{Corriente ACS712}}. \textendash{} {{Electr\'onica Pr\'actica Aplicada}}},
+  author = {{diarioelectronicohoy (website)}},
+  howpublished = {https://web.archive.org/web/20190715041409/https://www.diarioelectronicohoy.com/blog/sensor-de-corriente-acs712},
+  keywords = {acs712,intrusivo,sensores,tfg}
+}
+
+@misc{EclipseMosquitto,
+  title = {Eclipse {{Mosquitto}}},
+  howpublished = {https://mosquitto.org/},
+  keywords = {documentación,IoT,mosquitto,MQTT}
+}
+
+@misc{EclipseMosquitto2018,
+  title = {Eclipse {{Mosquitto}}},
+  year = {2018},
+  month = jan,
+  abstract = {Eclipse Mosquitto is an open source (EPL/EDL licensed) message broker that
+		implements the MQTT protocol versions 5.0, 3.1.1 and 3.1. Mosquitto
+		is lightweight and is suitable for use on all devices},
+  howpublished = {https://mosquitto.org/},
+  journal = {Eclipse Mosquitto},
+  keywords = {documentación,IoT,protocols},
+  language = {en}
 }
 
 @misc{enchufeinteligente.netwebsiteEjemplosEnchufesClasificacion,
-  title = {{Ejemplos de enchufes y clasificaci{\'o}n: "Enchufe Inteligente: el dispositivo que te ayuda a controlar la electricidad"}},
+  title = {{Ejemplos de enchufes y clasificaci\'on: "Enchufe Inteligente: el dispositivo que te ayuda a controlar la electricidad"}},
   shorttitle = {{Enchufe Inteligente}},
-  abstract = {Tienda online de ENCHUFES INTELIGENTES Monitorizaci{\'o}n Energ{\'i}a Control Remoto Wifi Programable Compatible con IA No quieres ser de los {\'u}ltimos que tengan un enchufe inteligente, \textquestiondown{}verdad? Controla tu casa sin ning{\'u}n esfuerzo \textquestiondown{}Quieres comprar enchufes inteligentes?~ \textexclamdown{}Entonces est{\'a}s en el sitio correcto! Enchufe inteligentewifi Ver m{\'a}s Enchufe inteligente control remoto Ver m{\'a}s Enchufe inteligente monitorizaci{\'o}n \ldots{}},
-  language = {es-ES},
-  journal = {EnchufeInteligente.net},
-  howpublished = {https://web.archive.org/web/20191111121342/https://enchufeinteligente.net/},
   author = {EnchufeInteligente.net (website)},
+  abstract = {Tienda online de ENCHUFES INTELIGENTES Monitorizaci\'on Energ\'ia Control Remoto Wifi Programable Compatible con IA No quieres ser de los \'ultimos que tengan un enchufe inteligente, \textquestiondown verdad? Controla tu casa sin ning\'un esfuerzo \textquestiondown Quieres comprar enchufes inteligentes?~ \textexclamdown Entonces est\'as en el sitio correcto! Enchufe inteligentewifi Ver m\'as Enchufe inteligente control remoto Ver m\'as Enchufe inteligente monitorizaci\'on \ldots},
+  howpublished = {https://web.archive.org/web/20191111121342/https://enchufeinteligente.net/},
+  journal = {EnchufeInteligente.net},
   keywords = {Documentación,ejemplos,enchufes},
-  file = {/home/cuack/Zotero/storage/FC4YCAQB/enchufeinteligente.net.html}
+  language = {es-ES}
 }
 
-@misc{amazonwebsiteGarza400603Temporizador,
-  title = {Garza 400603 {{Temporizador}} Anal{\'o}gico Mini, {{Blanco}} - {{Azul}}: {{Amazon}}.Es: {{Bricolaje}} y Herramientas},
-  howpublished = {https://web.archive.org/web/20191111121153/https://www.amazon.es/Garza-Power-Temporizador-anal\%C3\%B3gico-programaci\%C3\%B3n/dp/B00URUVDW2/},
-  author = {Amazon (website)},
-  keywords = {teletienda},
-  file = {/home/cuack/Zotero/storage/3TSHCH3N/ref=sr_1_2.html}
+@misc{ESP32MQTTBroker,
+  title = {{{ESP32 MQTT Broker Tutorial}} - {{How}} to {{Connect ESP32}} to {{MQTT Broker}}},
+  howpublished = {https://www.iotdesignpro.com/projects/how-to-connect-esp32-mqtt-broker},
+  keywords = {ejemplos,esp32,IoT,mqtt}
 }
 
-@misc{amazonwebsiteOrbegozoPG202019,
-  title = {Orbegozo {{PG}} 20 - {{Programador}} El{\'e}ctrico Digital Con Pantalla {{LCD}}, Temporizador de Funcionamiento Programable: {{Amazon}}.Es: {{Hogar}}},
-  shorttitle = {Orbegozo {{PG}} 20 - {{Programador}} El{\'e}ctrico Digital Con Pantalla {{LCD}}, Temporizador de Funcionamiento Programable},
-  howpublished = {https://web.archive.org/web/20191112121450/https://www.amazon.es/dp/B00ZJ1LQDK},
-  author = {Amazon (website)},
-  month = nov,
-  year = {2019},
-  keywords = {teletienda},
-  file = {/home/cuack/Zotero/storage/9835A83W/B00ZJ1LQDK.html}
+@misc{ESP32SeriesDatasheet,
+  title = {{{ESP32 Series Datasheet}}},
+  publisher = {{Expressif Systems}},
 }
 
-@misc{amazonwebsiteTPLinkHS100Enchufe,
-  title = {{{TP}}-{{Link HS100}} - {{Enchufe}} Inteligente Para Controlar Sus Dispositivos Desde Cualquier Lugar, Sin Necesidad de Concentrador, Funciona Con {{Amazon Alexa}} y {{Google Home}} e {{IFTTT}}: {{Tp}}-{{Link}}: {{Amazon}}.Es: {{Inform{\'a}tica}}},
-  howpublished = {https://web.archive.org/web/20191112130933/https://www.amazon.es/dp/B06W586CDZ},
-  author = {Amazon (website)},
-  keywords = {teletienda},
-  file = {/home/cuack/Zotero/storage/5AYQNY7T/B06W586CDZ.html}
+@misc{exploreembeddedwebsiteSettingBluetoothHC05,
+  title = {Setting up {{Bluetooth HC}}-05 with {{Arduino}}},
+  author = {{exploreembedded (website)}},
+  abstract = {Even though  Bluetooth Low Energy Modules available at a reasonable cost, most of these modules are not compatible with existing devices that support the classic Bluetooth. The HC-05 is an expensive module that is compatible with wide range of devices including smartphone, laptops and tablets. Adding...},
+  howpublished = {https://web.archive.org/web/20181017170923/http://exploreembedded.com/wiki/Setting\_up\_Bluetooth\_HC-05\_with\_Arduino},
+  journal = {Tutorials},
+  keywords = {bluetooth,tutorial},
+  language = {en}
 }
 
-@misc{randomnerdtutorialswebsiteESP32AnalogInput2019,
-  title = {{{ESP32 Analog Input}} with {{Arduino IDE}}},
-  abstract = {Learn how to read ESP32 Analog Inputs with Arduino IDE using analogRead function. Analog reading is useful to read values from potentiometers, analog sensors, etc},
-  language = {en-US},
-  journal = {Random Nerd Tutorials},
-  author = {Random Nerd Tutorials (website)},
-  month = may,
-  year = {2019},
-  keywords = {ADC,analog,ESP32,pinout,wifi},
-  file = {/home/cuack/Zotero/storage/KUPP6MBS/esp32-adc-analog-read-arduino-ide.html}
-}
-
-@misc{amazonwebsiteXiaomi18082Regleta2019,
-  title = {Xiaomi, 18082, {{Regleta}}, {{Blanco}}: {{Xiaomi}}: {{Amazon}}.Es: {{Electr{\'o}nica}}},
-  shorttitle = {Xiaomi, 18082, {{Regleta}}, {{Blanco}}},
-  howpublished = {https://web.archive.org/web/20191116174434/https://www.amazon.es/dp/B07DJ2G1CW},
-  author = {Amazon (website)},
-  month = nov,
-  year = {2019},
-  keywords = {teletienda},
-  file = {/home/cuack/Zotero/storage/54PMAIUR/B07DJ2G1CW.html}
-}
-
-@article{weyrichReferenceArchitecturesInternet2016,
-  title = {Reference {{Architectures}} for the {{Internet}} of {{Things}}},
-  volume = {33},
-  abstract = {The Internet of Things (IoT) is about innovative functionality and better productivity by seamlessly connecting devices. But a major threat is the lack of architecture standards for the industrial Internet and connectivity in the IoT. This article reviews recent IoT architecture evolution and what it means for industry projects.},
-  journal = {IEEE Software},
-  doi = {10.1109/MS.2016.20},
-  author = {Weyrich, Michael and Ebert, Christof},
+@inproceedings{hunkelerMQTTSPublishSubscribe2008,
+  title = {{{MQTT}}-{{S}} \&\#x2014; {{A}} Publish/Subscribe Protocol for {{Wireless Sensor Networks}}},
+  booktitle = {2008 3rd {{International Conference}} on {{Communication Systems Software}} and {{Middleware}} and {{Workshops}} ({{COMSWARE}} '08)},
+  author = {Hunkeler, Urs and Truong, Hong Linh and {Stanford-Clark}, Andy},
+  year = {2008},
   month = jan,
+  pages = {791--798},
+  publisher = {{IEEE}},
+  address = {{Bangalore, India}},
+  doi = {10.1109/COMSWA.2008.4554519},
+  isbn = {978-1-4244-1796-4},
+  keywords = {documentación,IoT,MQTT,protocols}
+}
+
+@misc{iecIECWorldPlugs,
+  title = {{{IEC}} - {{World Plugs}}: {{List}} View by Potential},
+  author = {IEC},
+  abstract = {https://web.archive.org/web/20180822153312/http://www.iec.ch/worldplugs/list\_byelectricpotential.htm},
+  howpublished = {http://www.iec.ch/worldplugs/list\_byelectricpotential.htm},
+  keywords = {potencial,voltaje}
+}
+
+@misc{IECWorldPlugs,
+  title = {{{IEC}} - {{World Plugs}}: {{List}} View by Location},
+  howpublished = {https://www.iec.ch/worldplugs/list\_bylocation.htm},
+  keywords = {documentación,enchufes}
+}
+
+@misc{industriesEspressifESP32Development2016,
+  title = {Espressif {{ESP32 Development Board}} - {{Developer Edition}}},
+  author = {Industries, Adafruit},
   year = {2016},
-  keywords = {documentación,IoT,arquitectura},
-  pages = {112-116},
-  file = {/home/cuack/Zotero/storage/V37HD3ME/Weyrich y Ebert - 2016 - Reference Architectures for the Internet of Things.pdf}
+  month = nov,
+  abstract = {Available at Adafruit!},
+  copyright = {Attribution-NonCommercial-ShareAlike License},
+  keywords = {adafruit,boards,breakoutboards,devboards,developers,documentación,electronics,esp32,images,pid3269,wifi}
+}
+
+@misc{iotagendawebsiteWhatInternetThings,
+  title = {What Is Internet of Things ({{IoT}})?},
+  shorttitle = {What Is Internet of Things ({{IoT}})?},
+  author = {IoT Agenda (website)},
+  abstract = {Learn everything you need to know about the internet of things (IoT) as a system of interrelated computing devices, machines or objects which transfer data over a network without requiring human-to-human or human-to-computer interaction.},
+  howpublished = {https://web.archive.org/web/20191107082047/https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT},
+  journal = {IoT Agenda},
+  keywords = {documentación,ejemplos,IoT},
+  language = {en}
+}
+
+@inproceedings{khanFutureInternetInternet2012,
+  title = {Future {{Internet}}: {{The Internet}} of {{Things Architecture}}, {{Possible Applications}} and {{Key Challenges}}},
+  shorttitle = {Future {{Internet}}},
+  booktitle = {2012 10th {{International Conference}} on {{Frontiers}} of {{Information Technology}}},
+  author = {Khan, Rafiullah and Khan, Sarmad Ullah and Zaheer, Rifaqat and Khan, Shahid},
+  year = {2012},
+  month = dec,
+  pages = {257--260},
+  publisher = {{IEEE}},
+  address = {{Islamabad, Pakistan}},
+  doi = {10.1109/FIT.2012.53},
+  abstract = {The Internet is continuously changing and evolving. The main communication form of present Internet is humanhuman. The Internet of Things (IoT) can be considered as the future evaluation of the Internet that realizes machine-to-machine (M2M) learning. Thus, IoT provides connectivity for everyone and everything. The IoT embeds some intelligence in Internetconnected objects to communicate, exchange information, take decisions, invoke actions and provide amazing services. This paper addresses the existing development trends, the generic architecture of IoT, its distinguishing features and possible future applications. This paper also forecast the key challenges associated with the development of IoT. The IoT is getting increasing popularity for academia, industry as well as government that has the potential to bring significant personal, professional and economic benefits.},
+  isbn = {978-0-7695-4927-9 978-1-4673-4946-8},
+  language = {en}
+}
+
+@article{krDesigningIoTArchitecture2014,
+  title = {Designing {{IoT Architecture}}(s)},
+  author = {Kr, Srdjan and Carrez, Francois},
+  year = {2014},
+  pages = {6},
+  abstract = {Internet of Things (IoT) domain has attracted a lot of interest over the last few years, to a large extent due to its applicability across a plethora of application domains. This variety of application domains resulted in a variety of requirements that IoT systems should comply with. Due to the heterogeneity of the domains, the requirements varied significantly, and demanding more or less complex systems with varied performance expectations. This situation affected the architecture design and resulted in a range of IoT architectures with not only varied set of components and functionalities, but also varied terminologies used. It resulted in limited interoperability between the systems which in turn hampered development of the complete domain.},
+  language = {en}
+}
+
+@misc{lightPahomqttMQTTVersion,
+  title = {Paho-Mqtt: {{MQTT}} Version 3.1.1 Client Class},
+  shorttitle = {Paho-Mqtt},
+  author = {Light, Roger},
+  copyright = {OSI Approved},
+  keywords = {Communications,documentación,Internet,IoT,mqtt,paho}
 }
 
 @misc{luigiatzoriInternetThingsSurvey2019,
   title = {The {{Internet}} of {{Things}}: {{A}} Survey - {{ScienceDirect}}},
   shorttitle = {The {{Internet}} of {{Things}}},
-  howpublished = {https://web.archive.org/web/20191116203648/https://web.archive.org/web/20190326025756/https://www.sciencedirect.com/science/article/abs/pii/S1389128610001568},
   author = {Luigi Atzori and Antonio Iera and Giacomo Morabito},
-  month = nov,
   year = {2019},
-  keywords = {documentación,IoT,arquitectura},
-  file = {/home/cuack/Zotero/storage/4KD2U36C/S1389128610001568.html}
+  month = nov,
+  howpublished = {https://web.archive.org/https://web.archive.org/web/20190326025756/https://www.sciencedirect.com/science/article/abs/pii/S1389128610001568},
+  keywords = {arquitectura,documentación,IoT}
 }
 
-@article{al-fuqahaInternetThingsSurvey2015,
-  title = {Internet of {{Things}}: {{A Survey}} on {{Enabling Technologies}}, {{Protocols}}, and {{Applications}}},
-  volume = {17},
-  issn = {1553-877X, 2373-745X},
+@misc{murdochMmurdochArduinounit2020,
+  title = {Mmurdoch/Arduinounit},
+  author = {Murdoch, Matthew},
+  year = {2020},
+  month = jun,
+  abstract = {ArduinoUnit is a unit testing framework for Arduino libraries},
+  copyright = {MIT},
+  keywords = {arduino,testing}
+}
+
+@misc{nuevatribunaOrigenFrecuenciasElectricas,
+  title = {{El origen de las frecuencias el\'ectricas \textquestiondown Por qu\'e 50 y 60 Hz?}},
+  author = {Nuevatribuna},
+  abstract = {Aunque en la actualidad pueda parecer que siempre ha existido una \'unica frecuenc...
+
+https://web.archive.org/web/20191101233437/https://www.nuevatribuna.es/articulo/ciencia/origen-frecuencias-electricas-50-y-60-hz/20150811110350118983.html},
+  howpublished = {https://www.nuevatribuna.es/articulo/ciencia/origen-frecuencias-electricas-50-y-60-hz/20150811110350118983.html},
+  journal = {Nuevatribuna},
+  language = {es}
+}
+
+@article{p.th.eugsterManyFacesPublish,
+  title = {The {{Many Faces}} of {{Publish}}/{{Subscribe}}},
+  author = {P.Th. Eugster and P.A. Felber and R. Guerraoui},
+  keywords = {documentación,IoT,protocols},
+  language = {en}
+}
+
+@article{palInternetThingsMaking2015,
+  title = {Internet of {{Things}}: {{Making}} the {{Hype}} a {{Reality}}},
   shorttitle = {Internet of {{Things}}},
-  abstract = {This paper provides an overview of the Internet of Things (IoT) with emphasis on enabling technologies, protocols, and application issues. The IoT is enabled by the latest developments in RFID, smart sensors, communication technologies, and Internet protocols. The basic premise is to have smart sensors collaborate directly without human involvement to deliver a new class of applications. The current revolution in Internet, mobile, and machine-to-machine (M2M) technologies can be seen as the first phase of the IoT. In the coming years, the IoT is expected to bridge diverse technologies to enable new applications by connecting physical objects together in support of intelligent decision making. This paper starts by providing a horizontal overview of the IoT. Then, we give an overview of some technical details that pertain to the IoT enabling technologies, protocols, and applications. Compared to other survey papers in the field, our objective is to provide a more thorough summary of the most relevant protocols and application issues to enable researchers and application developers to get up to speed quickly on how the different protocols fit together to deliver desired functionalities without having to go through RFCs and the standards specifications. We also provide an overview of some of the key IoT challenges presented in the recent literature and provide a summary of related research work. Moreover, we explore the relation between the IoT and other emerging technologies including big data analytics and cloud and fog computing. We also present the need for better horizontal integration among IoT services. Finally, we present detailed service use-cases to illustrate how the different protocols presented in the paper fit together to deliver desired IoT services.},
-  number = {4},
-  journal = {IEEE Communications Surveys Tutorials},
-  doi = {10.1109/COMST.2015.2444095},
-  author = {{Al-Fuqaha}, Ala and Guizani, Mohsen and Mohammadi, Mehdi and Aledhari, Mohammed and Ayyash, Moussa},
-  year = {Fourthquarter 2015},
-  keywords = {documentación,IoT,arquitectura,AMQP,big data analytics,cloud computing,CoAP,communication technologies,Computer architecture,DDS,fog computing,intelligent decision making,Intelligent sensors,Internet of things,Internet of Things,Internet of Things (IoT),Internet protocols,IoT gateway,IoT Gateway,M2M technologies,machine-to-machine,mDNS,mobile communication,Mobile communication,MQTT,protocols,radiofrequency identification,Radiofrequency identification,RFID,smart sensors,XMPP,protocolos},
-  pages = {2347-2376},
-  file = {/home/cuack/Zotero/storage/9DALXGPQ/Al-Fuqaha et al. - 2015 - Internet of Things A Survey on Enabling Technolog.pdf;/home/cuack/Zotero/storage/DVVD6BEC/7123563.html}
+  author = {Pal, Arpan},
+  year = {2015},
+  month = may,
+  volume = {17},
+  pages = {2--4},
+  issn = {1520-9202},
+  doi = {10.1109/MITP.2015.36},
+  journal = {IT Professional},
+  keywords = {IoT,protocols},
+  number = {3}
 }
 
-@article{krDesigningIoTArchitecture2014,
-  title = {Designing {{IoT Architecture}}(s)},
-  abstract = {Internet of Things (IoT) domain has attracted a lot of interest over the last few years, to a large extent due to its applicability across a plethora of application domains. This variety of application domains resulted in a variety of requirements that IoT systems should comply with. Due to the heterogeneity of the domains, the requirements varied significantly, and demanding more or less complex systems with varied performance expectations. This situation affected the architecture design and resulted in a range of IoT architectures with not only varied set of components and functionalities, but also varied terminologies used. It resulted in limited interoperability between the systems which in turn hampered development of the complete domain.},
-  language = {en},
-  author = {Kr, Srdjan and Carrez, Francois},
-  year = {2014},
-  pages = {6},
-  file = {/home/cuack/Zotero/storage/C3V732D3/Kr y Carrez - 2014 - Designing IoT Architecture(s).pdf}
+@misc{QtPythonTutorial,
+  title = {Qt for {{Python Tutorial}}: {{Data Visualization Tool}} - {{Qt Wiki}}},
+  howpublished = {https://wiki.qt.io/Qt\_for\_Python\_Tutorial:\_Data\_Visualization\_Tool},
+  keywords = {data visualization,ejemplos}
+}
+
+@misc{randomnerdtutorialswebsiteESP32AnalogInput2019,
+  title = {{{ESP32 Analog Input}} with {{Arduino IDE}}},
+  author = {Random Nerd Tutorials (website)},
+  year = {2019},
+  month = may,
+  abstract = {Learn how to read ESP32 Analog Inputs with Arduino IDE using analogRead function. Analog reading is useful to read values from potentiometers, analog sensors, etc},
+  journal = {Random Nerd Tutorials},
+  keywords = {ADC,analog,ESP32,pinout,wifi},
+  language = {en-US}
+}
+
+@misc{RichterPredictorModeling,
+  title = {Richter's {{Predictor}}: {{Modeling Earthquake Damage}}},
+  shorttitle = {Richter's {{Predictor}}},
+  abstract = {https://www.drivendata.org/competitions/57/nepal-earthquake/},
+  howpublished = {https://kaggle.com/mullerismail/richters-predictor-modeling-earthquake-damage},
+  language = {en}
+}
+
+@misc{salmenrinneSusundbergArduinosimpleunittest2019,
+  title = {Susundberg/Arduino-Simple-Unittest},
+  author = {Salmenrinne, Pauli},
+  year = {2019},
+  month = aug,
+  abstract = {Simple framework to provide unittesting for arduino projects},
+  copyright = {MIT},
+  keywords = {arduino,mock,testing,unittest}
+}
+
+@misc{schumacherIPv6LowPowerWireless,
+  title = {{{IPv6}} over {{Low}}-{{Power Wireless Personal Area Networks}} ({{6LoWPANs}}): {{Overview}}, {{Assumptions}}, {{Problem Statement}}, and {{Goals}}},
+  shorttitle = {{{IPv6}} over {{Low}}-{{Power Wireless Personal Area Networks}} ({{6LoWPANs}})},
+  author = {Schumacher, Christian Peter Pii and Kushalnagar, Nandakishore and Montenegro, Gabriel},
+  howpublished = {https://tools.ietf.org/html/rfc4919},
+  keywords = {IoT,protocols},
+  language = {en}
+}
+
+@misc{SCT013000DatasheetPDF,
+  title = {{{SCT}}-013-000 {{Datasheet PDF}} - {{Datasheet4U}}.Com},
+  howpublished = {https://datasheet4u.com/datasheet-pdf/XiDiTechnology/SCT-013-000/pdf.php?id=1004703}
+}
+
+@misc{SQLiteHomePage,
+  title = {{{SQLite Home Page}}},
+  howpublished = {https://sqlite.org/index.html},
+  keywords = {base de datos,sqlite}
+}
+
+@misc{StoreMQTTData2017,
+  title = {Store {{MQTT Data}} from {{Sensors}} into {{SQL Database}}},
+  year = {2017},
+  month = jan,
+  abstract = {Pradeep Singh | 20th Jan 2017 MQTT is a~great protocol for Sensors to publish data to their Subscribers. However, when it comes to~analytics or reporting, you need historical data. Most MQTT broker\ldots},
+  journal = {IoT Bytes},
+  keywords = {app,IoT,sqlite,tutorial},
+  language = {en}
+}
+
+@article{tempertonTVWhiteSpace2015,
+  title = {{{TV}} White Space Will Connect the Internet of Things},
+  author = {Temperton, James},
+  year = {2015},
+  month = feb,
+  issn = {1357-0978},
+  abstract = {White spaces in the radio spectrum can now be used for anything from wireless flood defences to city-wide Wi-Fi},
+  journal = {Wired UK},
+  keywords = {Broadband,Internet Of Things,IoT,protocols,Technology}
+}
+
+@article{vongsingthongs.;smanchats.IoTExamplesSuranaree,
+  title = {{{IoT}} Examples: {{Suranaree Journal}} of {{Science}} and {{Technology}}. P5-17},
+  author = {Vongsingthong, S.; Smanchat, S.},
+  keywords = {documentación,ejemplos,IoT}
+}
+
+@misc{WebServicesArchitecture,
+  title = {Web {{Services Architecture}}},
+  howpublished = {https://www.w3.org/TR/2004/NOTE-ws-arch-20040211/\#relwwwrest},
+  keywords = {IoT,protocols}
+}
+
+@article{weyrichReferenceArchitecturesInternet2016,
+  title = {Reference {{Architectures}} for the {{Internet}} of {{Things}}},
+  author = {Weyrich, Michael and Ebert, Christof},
+  year = {2016},
+  month = jan,
+  volume = {33},
+  pages = {112--116},
+  doi = {10.1109/MS.2016.20},
+  abstract = {The Internet of Things (IoT) is about innovative functionality and better productivity by seamlessly connecting devices. But a major threat is the lack of architecture standards for the industrial Internet and connectivity in the IoT. This article reviews recent IoT architecture evolution and what it means for industry projects.},
+  journal = {IEEE Software},
+  keywords = {arquitectura,documentación,IoT}
+}
+
+@article{wikipediawebsiteValorEficazPara2019,
+  title = {{Valor eficaz (para comprender Irms)}},
+  author = {{wikipedia (website)}},
+  year = {2019},
+  month = oct,
+  abstract = {Se denomina valor eficaz al valor cuadr\'atico medio de una magnitud el\'ectrica. El concepto de valor eficaz se utiliza especialmente para estudiar las formas de onda peri\'odicas, a pesar de ser aplicable a todas las formas de onda, constantes o no. En ocasiones se denomina con el extranjerismo RMS (del ingl\'es, root mean square).},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  journal = {Wikipedia, la enciclopedia libre},
+  keywords = {corriente,intensidad,sensores,tfg},
+  language = {es}
 }
 
 
