doc: Cambiado estilo de la bibliografía. Closes #9. - Ahora se encuentra alineado a la izquierda en lugar de justificado

--- a/documentacion/biblio.bib
+++ b/documentacion/biblio.bib
@@ -228,7 +228,7 @@
   shorttitle = {What Is Internet of Things ({{IoT}})?},
   author = {IoT Agenda (website)},
   abstract = {Learn everything you need to know about the internet of things (IoT) as a system of interrelated computing devices, machines or objects which transfer data over a network without requiring human-to-human or human-to-computer interaction.},
-  howpublished = {https://web.archive.org/web/20191107082047/https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT},
+  howpublished = {https://web.archive.org/web/20191107082047/ https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT},
   journal = {IoT Agenda},
   keywords = {documentación,ejemplos,IoT},
   language = {en}
