--- a/documentacion/memoria.tex
+++ b/documentacion/memoria.tex
@@ -1377,6 +1377,10 @@ a conseguir lo que se proponga.
 \newpage
 
 \bibliographystyle{unsrt}
+\begingroup
+\raggedright
+
 \bibliography{biblio} 
+\endgroup
 
 \end{document}
